# AILinks

./: README.md  pyproject.toml
docs/: README.md  _coverpage.md  _navbar.md  _sidebar.md  index.html
docs/data/Conferences/: Categories_Conferences.md  Categories_Conferences_S.md  Categories_Conferences_Y.md  Introductions_Conferences.md  Statistics_Conferences.md  Statistics_Conferences_S.md  Statistics_Conferences_Y.md
docs/data/Conferences/Categories_Conferences/: Artificial_Intelligence.md  Artificial_Life.md  Cloud_Computing.md  Combinatorial_Optimization.md  Computation_Theory.md  Computational_Intelligence.md  Computer_Science.md  Computer_Vision.md  Data_Engineering.md  Data_Mining.md  Data_and_Knowledge.md  Discrete_Algorithms.md  Evolutionary_Computation.md  Fuzzy_and_Uncertainty.md  Hardware_and_Software.md  Heuristic_Search.md  Intelligent_Robots.md  Learning_Theory.md  Machine_Learning.md  Multiagent.md  Multiagent_Systems.md  Natural_Language_Processing.md  Neural_Networks.md  Operating_Systems.md  Optimization.md  Pattern_Recognition.md  Planning_and_Scheduling.md  Robot_Learning.md  Robotics_and_UAV.md  Swarm_Intelligence.md  Theory.md  Uncertainty.md
docs/data/Conferences/Publishers_Conferences/: AAAI.md  ACL.md  ACM.md  IEEE.md  MIT.md  OPEN.md  PMLR.md  SPRINGER.md
docs/data/Conferences/Statistics_Conferences/: Artificial_Intelligence.md  Theory.md  (+24 more)
docs/data/Journals/: Categories_Journals.md  Categories_Journals_S.md  Categories_Journals_Y.md  Introductions_Journals.md  Statistics_Journals.md  Statistics_Journals_S.md  Statistics_Journals_Y.md
(+251 files in other folders)
