[project]
name = "AILinks"
version = "0.2.0"
description = "Artificial Intelligence Links"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [
    {name = "NextAI", email = "nextartifintell@gmail.com"}
]
maintainers = [
    {name = "NextAI", email = "nextartifintell@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[project.urls]
Homepage = "https://github.com/Easy-PhD/AILinks"
Repository = "https://github.com/Easy-PhD/AILinks"
Documentation = "https://Easy-PhD.github.io/AILinks"
Source = "https://github.com/Easy-PhD/AILinks"
Issues = "https://github.com/Easy-PhD/AILinks/issues"
Changelog = "https://github.com/Easy-PhD/AILinks/releases"
